@@ -24,4 +24,16 @@ typedef BOOLEAN (__stdcall *P_SbieDll_KillAll)(
     ULONG session_id,
     const WCHAR *box_name);
 
+#ifdef _M_IX86
+#define SbieApi_QueryBoxPath_Name "_SbieApi_QueryBoxPath@28"
+#define SbieApi_EnumBoxes_Name "_SbieApi_EnumBoxes@8"
+#define SbieApi_EnumProcessEx_Name "_SbieApi_EnumProcessEx@16"
+#define SbieDll_KillAll_Name "_SbieDll_KillAll@8"
+#else
+#define SbieApi_QueryBoxPath_Name "SbieApi_QueryBoxPath"
+#define SbieApi_EnumBoxes_Name "SbieApi_EnumBoxes"
+#define SbieApi_EnumProcessEx_Name "SbieApi_EnumProcessEx"
+#define SbieDll_KillAll_Name "SbieDll_KillAll"
+#endif
+
 #endif
